hphp/hack/test/typecheck/generics_restrictions/contravariance_static_function_bad.php
<?hh
class Contra<-T> {
  public static function foo(int $v): ?T {
    return null;
  }
}
